changes to css in the navbar, responsive layout problems solved

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -30,11 +30,28 @@
   text-align: center;
   position: relative;
   top: 50%;
-  transform: translateY(-15%);
   background-size: cover;
   background-repeat: no-repeat;
   margin-bottom: 0px;
 }
+
+@media (min-width: 576px) {
+  .jumbotron {
+    transform: unset;
+    padding: 4rem 2rem; } }
+
+@media (min-width: 576px) {.navigation-clean.navbar-default .navbar-nav > li > a {
+    color: black;
+}}
+
+@media (min-width: 768px) {
+  .navigation-clean.navbar-default .navbar-nav > li > a {
+  color: white; } }
+
+  @media (min-width: 768px) {
+    .jumbotron {
+     transform: translateY(-15%);
+     padding: 4rem 2rem; } }
 
 .navbar.navbar-default.navigation-clean {
   z-index: 1;
